# model-template

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .dockerignore  Dockerfile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/infra/: Pulumi.dev.yaml  Pulumi.yaml  index.ts  package-lock.json  package.json
{{cookiecutter.project_slug}}/src/{{cookiecutter.module_name}}/serving/: serve.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.module_name}}/training/: train.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.module_name}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/serving/: serve.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/training/: train.py
