[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name.replace("\"", "\\\"") }} <{{ cookiecutter.email }}>"]
packages = [{include = "{{cookiecutter.project_slug}}"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
lightgbm = "^4.5.0"
matplotlib = "^3.9.2"
mlflow = "^2.18.0"
scikit-learn = "^1.5.2"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
dvc = {extras = ["azure"], version = "^3.56.0"}
boto3 = "1.17.49"
azure-storage-blob = "^12.24.0"
azure-identity = "^1.19.0"

[tool.poetry.scripts]
train = "{{cookiecutter.project_slug}}.training.train:main"
serve = "{{cookiecutter.project_slug}}.serving.serve:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
